Fixed havre title left spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,7 @@ body {
 .title {
     margin-top: 100px;
     margin-bottom: 70px;
+    padding-left: 40px;
 }
 
 h1 {
